--- a/report/P2.tex
+++ b/report/P2.tex
@@ -36,14 +36,6 @@
 
 \input{sections/ch2-theory_Thomas.tex}
 
-\input{sections/ch2-theory_Anthony.tex}
-
-\input{sections/research_Gustavo.tex}
-
-\input{sections/ch2-stakeholder-analysis.tex}
-
-\input{sections/ch2-risk-analysis.tex}
-
 %Chapter 3  ------------
 \clearpage
 \chapter{Problem Definition}\label{ch:problem_definition}
@@ -83,6 +75,14 @@
 \chapter{Conclusion}\label{ch:conclusion}
 
 \input{sections/ch6-conclusion.tex}
+
+%Latex part of the report -------------
+
+%\chapter{\LaTeX}\label{ch:latex}
+
+%\input{sections/ch6-1-latex.tex}
+
+%--------------------------
 
 %Chapter 7  -----------
 \clearpage
