--- a/report/sections/ch2-theory_Emil.tex
+++ b/report/sections/ch2-theory_Emil.tex
@@ -1,8 +1,8 @@
 GPS theory
 
-"The Global Positioning System (GPS) is a space-based satellite navigation system that provides location and time information in all weather conditions, anywhere on or near the Earth where there is an unobstructed line of sight to four or more GPS satellites. The system provides critical capabilities to military, civil, and commercial users around the world. The United States government created the system, maintains it, and makes it freely accessible to anyone with a GPS receiver."[http://www.loc.gov/rr/scitech/mysteries/global.html]
+"The Global Positioning System (GPS) is a space-based satellite navigation system that provides location and time information in all weather conditions, anywhere on or near the Earth where there is an unobstructed line of sight to four or more GPS satellites. The system provides critical capabilities to military, civil, and commercial users around the world. The United States government created the system, maintains it, and makes it freely accessible to anyone with a GPS receiver."%[http://www.loc.gov/rr/scitech/mysteries/global.html]
 
-The GPS satellites carry each an atomic clock and position the user when he is connected to 4 or more satellite. The satellites measure the time it take for the signal to go back and forth between the satellites and a GPS receiver.[http://www.loc.gov/rr/scitech/mysteries/global.html] There is also in development and space "GPS" system that would use the X-ray signal from dying stars to give up you location in space with about error of 5 km.[http://www.bbc.com/news/science-environment-17557581]
+The GPS satellites carry each an atomic clock and position the user when he is connected to 4 or more satellite. The satellites measure the time it take for the signal to go back and forth between the satellites and a GPS receiver.[http://www.loc.gov/rr/scitech/mysteries/global.html] There is also in development and space "GPS" system that would use the X-ray signal from dying stars to give up you location in space with about error of 5 km.%[http://www.bbc.com/news/science-environment-17557581]
 
 Both of those systems would not benefit our project in space since we would need a high accuracy location of each picture to make a 3D map model. Maybe later in the future when people will be moving to Mars another GPS system will be put up there. But for now we would need to use encoders and short to medium range high accuracy signals. But the signal systems would need to be different for what planet we would go to. 
 
@@ -13,9 +13,9 @@ photographic images. This is done by comparing and matching pixels or reference 
 of photos.[http://um3d.dc.umich.edu/documents/123D-Catch-Field-Guide-1.pdf]"
 
 
-In the simplest example, the distance between two points that lie on a plane parallel to the photographic image plane can be determined by measuring their distance on the image, if the scale (s) of the image is known. This is done by multiplying the measured distance by $1/s$.[http://www.geodetic.com/v-stars/what-is-photogrammetry.aspx]
+In the simplest example, the distance between two points that lie on a plane parallel to the photographic image plane can be determined by measuring their distance on the image, if the scale (s) of the image is known. This is done by multiplying the measured distance by $1/s$.%[http://www.geodetic.com/v-stars/what-is-photogrammetry.aspx]
 
-Algorithms for photogrammetry typically attempt to minimize the sum of the squares of errors over the coordinates and relative displacements of the reference points. This minimization is known as bundle adjustment and is often performed using the Levenberg–Marquardt algorithm.[http://www.geodetic.com/v-stars/what-is-photogrammetry.aspx]
+Algorithms for photogrammetry typically attempt to minimize the sum of the squares of errors over the coordinates and relative displacements of the reference points. This minimization is known as bundle adjustment and is often performed using the Levenberg–Marquardt algorithm.%[http://www.geodetic.com/v-stars/what-is-photogrammetry.aspx]
 
 Photogrammetry could also be used in our project with AUV or a rover. The is no need for outside reference points to make the 3D model. But this setup is much more complicated to setup and maintain without an outside assistance. It would also need more pictures and higher resolution so more space on hard drives are needed. The algorithm needed to make the 3D model from the picture will need a lot of power and memory. So on board rendering would be really hard.
 
@@ -23,7 +23,7 @@ For higher resolution maps and more detailed the use of photogrammy is beneficia
 
 Reference points theory
 
-To make a 2D or a 3D map a reference point is needed. It can be GPS point of every picture taken. It can be comparing two pictures together and overlapping them. You can also combine both options. But with the lack of GPS in space and the cost of memory and power to make an overlapping 3D map, we need some other way. For an example Mars has a thin atmosphere on it. So using sound sensors is possible. The sensors would need to be calibrated for a difference in speed of sound on Mars. Other sensors like light (x-ray, laser and others) can also be used. That would mean setting up and array of sensors so the rover or AUV could connect to them and know it's position. The use of encoders and the wheels of the rover is also a anther solution but you would need to be sure to have error calculation in it. Because sometimes tires will move in a circle but there is no traction.[http://www.tandfonline.com/doi/full/10.1080/19475683.2013.868826#abstract]  
+To make a 2D or a 3D map a reference point is needed. It can be GPS point of every picture taken. It can be comparing two pictures together and overlapping them. You can also combine both options. But with the lack of GPS in space and the cost of memory and power to make an overlapping 3D map, we need some other way. For an example Mars has a thin atmosphere on it. So using sound sensors is possible. The sensors would need to be calibrated for a difference in speed of sound on Mars. Other sensors like light (x-ray, laser and others) can also be used. That would mean setting up and array of sensors so the rover or AUV could connect to them and know it's position. The use of encoders and the wheels of the rover is also a anther solution but you would need to be sure to have error calculation in it. Because sometimes tires will move in a circle but there is no traction.%[http://www.tandfonline.com/doi/full/10.1080/19475683.2013.868826#abstract]  
 
 %http://en.wikipedia.org/wiki/Stereoscopy
 
