added preliminary citations

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -163,3 +163,20 @@
 	year = {2015},
 	howpublished = "\url{http://www.seas.upenn.edu/sunfest/docs/slides/HuangLouie05.pdf}"
 }
+
+@MISC{refraction,
+    howpublished = "\url{http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf}"
+}
+
+@MISC{speedOfSound,
+    howpublished = "\url{http://www.dtic.mil/get-tr-doc/pdf?AD=ADA076060}"
+}
+
+@MISC{barometric1,
+    howpublished = "\url{http://web.ist.utl.pt/ist12219/data/43.pdf}"
+}
+
+@MISC{barometric2,
+    howpublished = "\url{http://arxiv.org/pdf/1003.1508.pdf}"
+}
+
