Adding more stakeholders - ran out of battery save

--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -23,6 +23,10 @@ Group H103 is the group who develops the solution for this project. The group co
 	   	\hline
 	   	\bfseries Name of stakeholder & \bfseries Type & \bfseries Role \\ \hline
 	   	Group H103 & Technology carriers & Developers \\ \hline
+	   	Bomb squad & Technology carriers & Developers \\ \hline
+	    Scientists & Technology carriers & Developers \\ \hline
+ 	   	Police forces & Technology carriers & Developers \\
+	   	\hline
 	\end{tabular}
 	\caption{Stakeholder table}
 	\label{table:stakeholdertable}
