--- a/report/citations.bib
+++ b/report/citations.bib
@@ -164,6 +164,31 @@
 	howpublished = "\url{http://www.seas.upenn.edu/sunfest/docs/slides/HuangLouie05.pdf}"
 }
 
+@MISC{laserrangepic,
+	author = {Jay Chakravarty},
+	title = {Simulated Laser Range Finder Readings Using Python and OpenCV},
+	month = apr,
+	year = {2012},
+	howpublished = "\url{http://www.jaychakravarty.com/?p=75}"
+}
+
+
+@MISC{dstar,
+	author = {Tony Stentz},
+	title = {Real-Time Replanning in Dynamic and Unknown Environments},
+	month = may,
+	year = {2000},
+	howpublished = "\url{http://www.extremetech.com/extreme/159347-pathfinding-is-the-key-to-putting-robot-pack-mules-in-the-field}"
+}
+
+@MISC{moredstar,
+	author = {Anthony Stentz},
+	title = {Optimal and Efficient Path Planning for Partially-Known Environments},
+	month = may,
+	year = {1994},
+	howpublished = "\url{http://www.extremetech.com/extreme/159347-pathfinding-is-the-key-to-putting-robot-pack-mules-in-the-field}"
+}
+
 @MISC{refraction,
     howpublished = "\url{http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf}"
 }
