Added some sectioning to Emils part

--- a/report/sections/ch2-theory_Emil.tex
+++ b/report/sections/ch2-theory_Emil.tex
@@ -1,4 +1,4 @@
-GPS theory
+\section{GPS theory}
 
 "The Global Positioning System (GPS) is a space-based satellite navigation system that provides location and time information in all weather conditions, anywhere on or near the Earth where there is an unobstructed line of sight to four or more GPS satellites. The system provides critical capabilities to military, civil, and commercial users around the world. The United States government created the system, maintains it, and makes it freely accessible to anyone with a GPS receiver."%[http://www.loc.gov/rr/scitech/mysteries/global.html]
 
@@ -6,7 +6,7 @@ The GPS satellites carry each an atomic clock and position the user when he is c
 
 Both of those systems would not benefit our project in space since we would need a high accuracy location of each picture to make a 3D map model. Maybe later in the future when people will be moving to Mars another GPS system will be put up there. But for now we would need to use encoders and short to medium range high accuracy signals. But the signal systems would need to be different for what planet we would go to. 
 
-Photogrammetry theory
+\section{Photogrammetry theory}
 
 "Photogrammetry is the practice of determining the geometric properties of objects from
 photographic images. This is done by comparing and matching pixels or reference points across a series
@@ -21,7 +21,7 @@ Photogrammetry could also be used in our project with AUV or a rover. The is no 
 
 For higher resolution maps and more detailed the use of photogrammy is beneficial. But to start with it would be easier to take another approach.
 
-Reference points theory
+\section{Reference points theory}
 
 To make a 2D or a 3D map a reference point is needed. It can be GPS point of every picture taken. It can be comparing two pictures together and overlapping them. You can also combine both options. But with the lack of GPS in space and the cost of memory and power to make an overlapping 3D map, we need some other way. For an example Mars has a thin atmosphere on it. So using sound sensors is possible. The sensors would need to be calibrated for a difference in speed of sound on Mars. Other sensors like light (x-ray, laser and others) can also be used. That would mean setting up and array of sensors so the rover or AUV could connect to them and know it's position. The use of encoders and the wheels of the rover is also a anther solution but you would need to be sure to have error calculation in it. Because sometimes tires will move in a circle but there is no traction.  %[http://www.tandfonline.com/doi/full/10.1080/19475683.2013.868826#abstract]  
 
