Added some more stuff (Possibly final)

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -189,6 +189,15 @@
 	howpublished = "\url{http://www.extremetech.com/extreme/159347-pathfinding-is-the-key-to-putting-robot-pack-mules-in-the-field}"
 }
 
+@MISC{linetrack,
+	author = {Ibrahim Kamal},
+	title = {Line tracking sensors and algorithms},
+	month = feb,
+	year = {2008},
+	howpublished = "\url{http://www.ikalogic.com/line-tracking-sensors-and-algorithms/}"
+}
+
+
 @MISC{refraction,
     howpublished = "\url{http://www-mipp.fnal.gov/RICH/refractivityOfAir.pdf}"
 }
