--- a/report/sections/ch2-risk-analysis.tex
+++ b/report/sections/ch2-risk-analysis.tex
@@ -1,5 +1,8 @@
+%NOTE: This section has to be filled out after PD has been completed. Should we moved this to Chapter 3, PD, too?
+
 \section{Risk management}
-Possible risks that could occur before, during and after the implementation of the proposed bicycle-locking system, elaborated in this report, and presented in the form of a table together with a mitigation plan for each and every identified risk.
+Possible risks that could occur before, during and after the implementation of the proposed %TODO: Insert prototype system name here
+, elaborated in this report, and presented in the form of a table together with a mitigation plan for each and every identified risk.
 
 \subsection{Overview} 
 We listed most of the risks that would influence the design process of our product. These risks will be used as criteria for the end-product.
