Added EOD to Stakeholder analysis

--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -3,12 +3,25 @@
 \subsection{Interested parties}
 Interested parties are the groups of people who are being affected either negatively or positively by the product in question. They have some influence over the development, as the trends and actions of these interested parties has to be taken into consideration by the development team.
 
+\subsubsection{ESA}
+
+\subsubsection{NASA}
+
+\subsubsection{The Danish Army}
+
+\subsubsection{The National Police}
+
 \subsection{Actors}
 Actors are a subset of \textit{Interested parties}, who have any influence on the development of the project, either by financing it, providing knowledge or help the development of the project.
 	
 \subsection{Technology carriers}
 Technology carriers are a subset of \textit{Actors} who have influence to change the direction of the project.
-	
+
+\subsubsection{Danish Explosive Ordnance Disposal squad} 
+Also known as \textit{Ammunitionsrydningstjenesten} or \textit{EOD} in Danish, refers to the Danish bomb disposal squad \cite{EOD}. %http://www2.forsvaret.dk/viden-om/indland/ammunitionsrydning/Pages/Ammunitionsrydning2.aspx
+They are the one called in for emergency situations or bomb squares, where they use robots to map the area and find the possible suspicious items to investigate. The function of this squad is very crucial to the Danish Army, as these men and women need special training and education to work with these tools and technologies to ensure the public safety in these special cases. The interest that the Danish EOD squad would have in this project would be in regards of mapping technology and autonomous navigation in unknown terrains. Such technology could be used on rovers that bomb squads generally use for going in to building to find possible threats and to investigate it. This could mean they would have possible interest in the development, customization of the project to their needs and even financial interest. They are also considered as a potential users and carriers of this technology.
+
+\subsubsection{Group H103}	
 Group H103 is the group who develops the solution for this project. The group consists of:
 \begin{itemize}
 	\item Antal János Monori
@@ -23,9 +36,11 @@ Group H103 is the group who develops the solution for this project. The group co
 	   	\hline
 	   	\bfseries Name of stakeholder & \bfseries Type & \bfseries Role \\ \hline
 	   	Group H103 & Technology carriers & Developers \\ \hline
-	   	Bomb squad & Technology carriers & Developers \\ \hline
-	    Scientists & Technology carriers & Developers \\ \hline
- 	   	Police forces & Technology carriers & Developers \\
+	   	Danish Explosive Ordnance Disposal squad & Technology carriers &  \\ \hline
+ 	   	NASA & Interested parties &  \\ \hline
+ 	   	ESA & Interested parties &  \\ \hline
+ 	   	The Danish Army & Interested parties & \\ \hline
+ 	   	The National Police & Interested parties &  \\
 	   	\hline
 	\end{tabular}
 	\caption{Stakeholder table}
