--- a/report/citations.bib
+++ b/report/citations.bib
@@ -214,3 +214,10 @@
     howpublished = "\url{http://arxiv.org/pdf/1003.1508.pdf}"
 }
 
+%-------------------------------------------------------
+%stakeholder analysis
+
+@MISC{EOD,
+	howpublished = "\url{http://www2.forsvaret.dk/viden-om/indland/ammunitionsrydning/Pages/Ammunitionsrydning2.aspx}"
+}
+
