--- a/report/citations.bib
+++ b/report/citations.bib
@@ -218,6 +218,16 @@
 %stakeholder analysis
 
 @MISC{EOD,
+	title = {Forsvaret for Danmark - Ammunitionsrydning},
+	month = dec,
+	year = {2013},
 	howpublished = "\url{http://www2.forsvaret.dk/viden-om/indland/ammunitionsrydning/Pages/Ammunitionsrydning2.aspx}"
+}
+
+@MISC{Police,
+	title = {About the Police - The National Police},
+	month = aug,
+	year = {2007},
+	howpublished = "\url{https://www.politi.dk/en/About_the_police/national_police/}"
 }
 
